--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+      TZ: Asia/Bangkok            # ✅ ตั้ง timezone ไทย
     ports:
       - "5432:5432"
     volumes:
@@ -26,6 +27,7 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      TZ: Asia/Bangkok            # ✅ เพิ่ม timezone ไทย
     ports:
       - "8081:80"
     depends_on:
@@ -40,6 +42,8 @@ services:
       - "${PORT}:${PORT}"
     env_file:
       - .env
+    environment:
+      - TZ=Asia/Bangkok            # ✅ เพิ่ม timezone ไทย
     depends_on:
       postgres:
         condition: service_healthy
