--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+      PGTZ: Asia/Bangkok  # ✅ PostgreSQL timezone
       TZ: Asia/Bangkok            # ✅ ตั้ง timezone ไทย
     ports:
       - "5432:5432"
